2011-08-09  0.32  H.Merijn Brand

    * TYPE should be numeric
    * Added tests for return count of delete statements in do
    * Upped copyright to 2011

2010-09-18  0.31  H.Merijn Brand

    * Require 5.8.1 (effectively already doing so by requiring DBI-1.614)
    * Update tests to use warnings and done_testing ()
      requires Test::More-0.90, which is also required for DBI
    * Better diagnostics for empty files
    * Allow late setting of attributes (RT#61168) - requires DBI-1.614

2010-07-09  0.30  H.Merijn Brand

    * Text::CSV_XS now called with auto_diag
    * Implement valid_attrs
    * Next version will require DBI-1.612 or higher
      This is a transition release

2010-07-04  0.29_03  H.Merijn Brand

    * Remove leftover debug. Causes fails

2010-07-02  0.29_02  H.Merijn Brand

    * More work to keep in sync with DBI development (Jens)
    * Better diagnostics for missing modules
    * More spell-check fixes
    * Tests for ChopBlanks (now fixed in DBD::File)
    * Tests changed to accept old and new DBI
    * Statement handle attributes handled in new DBD::File

2010-06-11  0.29_01  H.Merijn Brand

    * Prepare for DBD::File-0.39 (DBI-1.612+)
      Should still work with older DBI versions
    * Documentation updates (style, consistency, spell-checking)
    * Test folder cleanup
    * More tests for insert
    * Tested RT#58039

2010-05-03  0.29  H.Merijn Brand

    * Fix git URL in META.yml
    * Add empty CLONE method to prevent warning when cloning threads
    * Minimum perl 5.8.1
    * Minimum Text::CSV_XS 0.71
    * Support for f_encoding (requires DBI-1.611)
    * Documentation updates

2010-03-16  0.28  H.Merijn Brand

    * Remove t/00_minimumversion.t from distribution
    * Dropped YAML spec to 1.0
    * Sync up with SQL::Statement 1.25
      NOTE: Internals of both modules changed. They will change again for
            SQL::Statement 2.0

2010-02-17  0.27  H.Merijn Brand

    * Upped copyright to 2010